# plantr

./: .gitignore
app/: .env  index.html  package.json  pnpm-lock.yaml  vite.config.js  webpack.config.js
app/src/: App.tsx  index.css  index.tsx
app/src/api/: clientApi.ts
app/src/api/dataSource/: ClientApiDataSource.ts
app/src/components/calendar/: Calendar.tsx
app/src/components/common/auth/: AuthWrapper.tsx
app/src/components/common/error-modal/: ErrorModal.tsx  error-modal.module.scss
app/src/hooks/: index.ts  useActions.ts  useAuth.ts  useCalendar.ts  useModal.ts  useThrottle.ts  useTypedSelector.ts
app/src/hooks/useValidator/: index.ts  types.ts
app/src/pages/calendar/: index.tsx
app/src/pages/context/: index.tsx
app/src/pages/login/: index.tsx  login.module.scss
app/src/pages/setup/: index.tsx
app/src/providers/ModalProvider/: index.tsx
app/src/providers/PopupProvider/: index.tsx
app/src/store/: store.ts
app/src/store/events/: actions.ts  types.ts
app/src/store/modals/: actions.ts  reducer.ts  types.ts
app/src/types/: date.ts  event.ts
app/src/utils/: mocks.ts
app/src/utils/helpers/: checkIsEventsShowInCurrentInterval.ts  getEventsInterval.ts  getLongEvents.ts  getPositionYForDayEvents.ts  getPositionYForWeekEvents.ts  getShortEvents.ts  getSortedEvents.ts  getSortedWeekEvents.ts  getStyledByPositionXForEvent.ts  getStyledByPostionYForEvent.ts  getStyledForLongEvent.ts  parseEvents.ts
app/src/validation-schemas/: index.ts
logic/: Cargo.toml
logic/res/: plantr.wasm
logic/src/: lib.rs
(+52 files in other folders)
